--- a/script/benchmark/config-containerd/etc/containerd/config.toml
+++ b/script/benchmark/config-containerd/etc/containerd/config.toml
@@ -1,6 +1,16 @@
+disabled_plugins = ["cri"]
+
 version = 2
 
 [proxy_plugins]
   [proxy_plugins.stargz]
     type = "snapshot"
     address = "/run/containerd-stargz-grpc/containerd-stargz-grpc.sock"
+    
+  [proxy_plugins.soci]
+    type = "snapshot"
+    address = "/run/soci-snapshotter-grpc/soci-snapshotter-grpc.sock"
+
+  [proxy_plugins.nydus]
+    type = "snapshot"
+    address = "/run/containerd-nydus/containerd-nydus-grpc.sock"
