--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -25,7 +25,7 @@ jobs:
       fail-fast: false
       max-parallel: 1
       matrix:
-        runtime: ["podman", "containerd"]
+        runtime: ["containerd"]
     steps:
     - name: Install tools
       run: |
